# PROJETO-FINAL---LPII

./: .gitignore  CMakeLists.txt  README.md
app/: log_demo.cpp  tcp_client.cpp  tcp_server.cpp
docs/: Relatorio_Final.md  mapa_requisitos.md  seq_chat_v3.md  seq_logger.md
include/tslog/: LogLevel.hpp  Logger.hpp  ThreadSafeQueue.hpp
scripts/: build_windows.bat  test_multi_win.bat
src/: Logger.cpp  net.hpp  platform.hpp
